# Elevator-Safety-Monitoring-Unit

./: .gitignore  GEMINI.md  README.md  esmu.code-workspace
ESMU/: CMakeLists.txt  README.md
ESMU/agent/: GEMINI.md  README.md  agent.md  checkpoint.md  memory.md  plan.md  roadmap.md  task.md  todo.md
ESMU/agent/plan/: idea.md
ESMU/components/services/motion_monitor/: CMakeLists.txt  README.md  motion_monitor.c  service.c
ESMU/components/services/motion_monitor/filter/: motion_filter.c
ESMU/components/services/motion_monitor/include/: motion_monitor.h
ESMU/components/services/motion_monitor/src/balance/: balance.c  motion_balance.c  motion_balance.h
ESMU/components/services/motion_monitor/src/core/: motion_processor.c  motion_processor.h  motion_task.c  motion_task.h  processor.c
ESMU/components/services/motion_monitor/src/filter/: filter.c  motion_filter.h
ESMU/components/services/motion_monitor/src/fsm/: fsm.c  motion_fsm.c  motion_fsm.h
ESMU/components/system/: CMakeLists.txt  README.md  system.c
ESMU/components/system/controller/: system_controller.c
ESMU/components/system/include/: system.h  system_config.h  system_error.h  system_event.h
ESMU/src/: CMakeLists.txt
ESMU/test/: README.md
ESMU/test/test_connectivity/: README.md
ESMU/test/test_motion_monitor/: test_motion_monitor.c
ESMU/test/test_mpu6050/: README.md  test_mpu6050.c
ESMU/test/test_ssd1306/: README.md
agent/: checkpoint.md  memory.md  todo.md
agent/context/: checkpoint.md  memory.md  roadmap.md
agent/memory/: fixed_bugs.md  ota_implementation.md
agent/plan/: bug_fixing_plan.md  code_plan.md  idea.md
agent/rules/: chat_rules.md  coding_rules.md  committing_rules.md  debugging_rules.md  documenting_rules.md
agent/temporary/: task.md
edge-stm32/: .cproject  .mxproject  .project  CMakeLists.txt  README.md  edge-stm32.ioc
edge-stm32/Core/Inc/: can_platform.h  main.h
edge-stm32/Core/Src/: main.c  stm32f1xx_hal_msp.c
edge-stm32/EWARM/: Project.eww  edge-stm32.ewd  edge-stm32.ewp
edge-stm32/cmake/stm32cubemx/: CMakeLists.txt
gateway-esp32/: CMakeLists.txt  README.md  partitions.csv  platformio.ini
gateway-esp32/app/core/: CMakeLists.txt  system.c  system.h  system_config.h
gateway-esp32/app/core/boot/: system_boot.c
gateway-esp32/app/core/boot/hardware/: hardware_boot.c  hardware_boot.h
gateway-esp32/app/core/controller/: README.md  system_controller.c
gateway-esp32/app/core/heart_beat/: heartbeat.c
gateway-esp32/components/system/: CMakeLists.txt  system_registry.c
gateway-esp32/components/system/boot/: system_boot.c  system_boot.h  system_hw.c  system_hw.h
gateway-esp32/components/system/controller/: system_controller.c
gateway-esp32/components/system/core/: system_config.h  system_controller.c
gateway-esp32/components/system/include/: system.h  system_config.h  system_registry.h
gateway-esp32/components/system/registry/: system_registry.c  system_registry.h
gateway-esp32/components/system/services/: heartbeat.h
gateway-esp32/components/system/storage/: nvs_storage.c  nvs_storage.h
gateway-esp32/data/: index.html  script.js  style.css
gateway-esp32/platform/: README.md
gateway-esp32/src/: CMakeLists.txt  main.c
gateway-esp32/test/: README.md
shared/: README.md
shared/can_protocol/: README.md  esmu_protocol.h  protocol_packets.h  protocol_types.h
shared/protocol/: protocol.h  protocol_packets.h
(+222 files in other folders)
