idf_component_register(
    SRCS 
        "system.c"
        "system_registry.c"
        "nvs_storage.c"
        "controller/system_controller.c"
    INCLUDE_DIRS "include"
    REQUIRES 
        nvs_flash 
        esp_common 
        log 
        freertos 
        esp_system
        can_protocol
    PRIV_REQUIRES 
        i2c_bsp
        display
        connectivity_manager
        motion_proxy
        telemetry
        can_bsp
)
