idf_component_register(
    SRCS 
        "core/system.c"
        "core/system_controller.c"
        "boot/system_boot.c"
        "boot/system_hw.c"
        "registry/system_registry.c"
        "storage/nvs_storage.c"
        "services/heartbeat.c"
    INCLUDE_DIRS 
        "core"
        "boot"
        "registry"
        "storage"
        "services"
    REQUIRES 
        nvs_flash 
        esp_common 
        log 
        freertos 
        esp_system
        can_protocol
        board_pins
    PRIV_REQUIRES 
        i2c_bsp
        uart_bsp
        connectivity_manager
        motion_proxy
        telemetry_service
        can_bsp
)
